ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wildcard-host
  namespace: dev
spec:
  ingressClassName: nginx
  rules:
  - host: "18.233.64.158.nip.io"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: revving
            port:
              number: 80
